--- a/src/app/head/head.component.html
+++ b/src/app/head/head.component.html
@@ -1,175 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Header</title>
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Header</title>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<!-- -->
+    <!-- -->
 
-<!---->
+    <!---->
 
 
 
 </head>
+
 <body>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col col-12">
-        <!-- As a heading -->
-          <nav class="navbar navbar-light bg-light">
-              <span class="navbar-brand mb-0 h1">Boutique elan </span>
-              <div class="logo_tel">
-                <h4>
-                   <!--<i class="fa fa-phone" style="font-size:18px"></i>-->
-                    <p class="pa-phone"> <img class="fa-phone" src="../../assets/images/logo/tel.png">
-                       (+216) 71.000 000
-                    </p>
-                </h4>
-              </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col col-12">
+                <!-- As a heading -->
+                <nav class="navbar navbar-light bg-light">
+                    <span class="navbar-brand mb-0 h1">Boutique elan </span>
+                    <div class="logo_tel">
+                        <h4>
+                            <!--<i class="fa fa-phone" style="font-size:18px"></i>-->
+                            <p class="pa-phone"> <img class="fa-phone" src="../../assets/images/logo/tel.png"> (+216) 71.000 000
+                            </p>
+                        </h4>
+                    </div>
 
-<!-- reseau social -->
+                    <!-- reseau social -->
 
-     <!-- fin nav bar-->
+                    <!-- fin nav bar-->
 
-   <!-- fin 3eme col-->
+                    <!-- fin 3eme col-->
 
 
-          </nav>
-      </div>
+                </nav>
+            </div>
+        </div>
+
+
+
+
+
+        <div class="row">
+            <!-- logo-->
+            <div class="col col-3">
+                <div class="logo_img">
+                    <img src="../../assets/images/logo-Elan.png" alt="logo">
+                </div>
+            </div>
+            <!-- barre de rechercher-->
+            <div class="col col-6">
+                <form class="card card-sm">
+                    <div class="card-body row no-gutters align-items-center">
+                        <div class="col-auto">
+                            <i class="fa fa-search  h4 text-body" style="font-size:14px" aria-hidden="true"></i>
+                        </div>
+                        <!--end of col-->
+                        <div class="col">
+                            <input class="form-control form-control-sm form-control-borderless" type="search" placeholder="Search topics or keywords">
+                        </div>
+                        <!--end of col-->
+                        <div class="col-auto">
+                            <button class="btn btn-lg btn-success" type="submit">Search</button>
+                        </div>
+                        <!--end of col-->
+                    </div>
+                </form>
+
+
+            </div>
+
+            <!-- logo social media -->
+
+            <div class="col col-3">
+                <nav class="navbar navbar-expand-md">
+                    <ul class="navbar-nav">
+                        <!-- facebook logo-->
+                        <li class="nav-item">
+                            <a class="dark-grey-text" href="http://www.facebook.com/Elan-by-CONECT-Entreprise-dentrainement-546724438806098" target="_blank">
+                                <div class="social_logo">
+                                    <img src="../../assets/images/L/fb.png" alt="ATFP" class="social">
+                                </div>
+                            </a>
+                        </li>
+                        <!-- youtube logo-->
+                        <li class="nav-item">
+                            <a class="dark-grey-text" href="http://www.youtube/ELAN byCONECT">
+                                <div class="social_logo">
+                                    <img src="../../assets/images/L/Logo Youtube -03.jpg" alt="ATFP" class="social">
+                                </div>
+                            </a>
+                        </li>
+
+                        <!-- Instagram logo-->
+                        <li class="nav-item">
+                            <a class="dark-grey-text" href="http://www.instagram.com/elanbyconect" target="_blank">
+                                <div class="social_logo">
+                                    <img src="../../assets/images/L/Logo Instgrame -02.jpg" alt="ATFP" class="social">
+                                </div>
+                            </a>
+                        </li>
+
+                        <!-- Linkedin logo-->
+                        <li class="nav-item">
+                            <a class="dark-grey-text" href="http://www.linkedin.com/company/elan-by-conect-entreprise-d-entrainement" target="_blank">
+                                <div class="social_logo">
+                                    <img src="../../assets/images/L/Log LinkedIn-04.jpg" alt="ATFP" class="social">
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                    <!-- fin ligne social media logo nav-->
+                </nav>
+                <!-- fin nav bar-->
+            </div>
+            <!-- fin 3eme col-->
+        </div>
+        <!-- fin 2eme row -->
+
+
+        <!-- fin row principal-->
     </div>
 
 
 
-
-
-    <div class="row">
-      <!-- logo-->
-      <div class="col col-3">
-        <div class="logo_img">
-          <img src="../../assets/images/logo-Elan.png" alt="logo">
-        </div>
-      </div>
-      <!-- barre de rechercher-->
-      <div class="col col-6">
-        <form class="card card-sm">
-          <div class="card-body row no-gutters align-items-center">
-              <div class="col-auto">
-                  <i class="fa fa-search  h4 text-body" style="font-size:24px" aria-hidden="true" ></i>
-              </div>
-              <!--end of col-->
-              <div class="col">
-                  <input class="form-control form-control-lg form-control-borderless" type="search" placeholder="Search topics or keywords">
-              </div>
-              <!--end of col-->
-              <div class="col-auto">
-                  <button class="btn btn-lg btn-success" type="submit">Search</button>
-              </div>
-              <!--end of col-->
-          </div>
-      </form>
-
-
-      </div>
-
-
-
-
-        <!-- logo social media -->
-        <div class="row">
-         <div class="col col-3">
-          <nav class="navbar navbar-expand-sm">
-            <ul class="navbar-nav">
-              <!-- facebook logo-->
-              <li class="nav-item">
-               <a class="dark-grey-text" href="http://www.facebook.com/Elan-by-CONECT-Entreprise-dentrainement-546724438806098" target="_blank">
-                 <div class="social_logo">
-                   <img src="../../assets/images/L/fb.png" alt="ATFP" class="social">
-                 </div>
-               </a>
-              </li>
-                <!-- youtube logo-->
-              <li class="nav-item">
-                <a class="dark-grey-text" href="http://www.youtube/ELAN byCONECT">
-                 <div class="social_logo">
-                   <img src="../../assets/images/L/Logo Youtube -03.jpg" alt="ATFP" class="social">
-                 </div>
-               </a>
-              </li>
-
-               <!-- Instagram logo-->
-               <li class="nav-item">
-                <a class="dark-grey-text" href="http://www.instagram.com/elanbyconect" target="_blank">
-                  <div class="social_logo">
-                    <img src="../../assets/images/L/Logo Instgrame -02.jpg" alt="ATFP" class="social">
-                  </div>
-                </a>
-              </li>
-
-              <!-- Linkedin logo-->
-              <li class="nav-item">
-                <a class="dark-grey-text" href="http://www.linkedin.com/company/elan-by-conect-entreprise-d-entrainement" target="_blank">
-                  <div class="social_logo">
-                    <img src="../../assets/images/L/Log LinkedIn-04.jpg" alt="ATFP" class="social">
-                  </div>
-                </a>
-              </li>
-            </ul>
-            <!-- fin ligne social media logo nav-->
-            </nav>
-            <!-- fin nav bar-->
-          </div>
-          <!-- fin 3eme col-->
-       </div>
-      <!-- fin 2eme row -->
-
-
-    <!-- fin row principal-->
-  </div>
-
-
-
- <!-- Page navbar  -->
+    <!-- Page navbar  -->
 
     <app-navigation></app-navigation>
 
 
- <!-- hr -->
- <div class="row">
-  <div class="col col-4"> </div>
-  <div class="col col-8">
-    <hr style="border: 5px;border-color: darkkhaki;">
-  </div>
-</div>
-
- <!-- side barre -->
-<div class="row">
-  <div class="col col-4 sidfixed">
-    <!-- A vertical navbar -->
-    <div class="w3-sidebar w3-bar-block w3-large w3-border-bottom">
-      <a routerLink="/contenu" class="w3-bar-item w3-button"> <i class="fa fa-home"></i> Home </a>
-      <a routerLink="/quisommenous" class="w3-bar-item w3-button"> <i class="fa fa-exclamation"> </i>  Qui somme nous</a>
-      <div class="w3-dropdown-hover">
-        <button class="w3-button"> <i class="fa fa-navicon"> </i> Nos Produits </button>
-        <div class="w3-dropdown-content w3-bar-block">
-          <a routerLink="/patlist" class="w3-bar-item w3-button">Patissiers</a>
-          <a routerLink="/artslist" class="w3-bar-item w3-button">Artisanaux</a>
+    <!-- hr -->
+    <div class="row">
+        <div class="col col-4"> </div>
+        <div class="col col-8">
+            <hr style="border: 5px;border-color: darkkhaki;">
         </div>
-      </div>
-    <a href="#" class="w3-bar-item w3-button"> <i class="fa fa-wrench"></i> Condition de vente</a>
-    <a routerLink="/contactez" class="w3-bar-item w3-button"> <i class="fa fa-envelope"> </i> Contactez nous</a>
     </div>
 
-    <div style="margin-left:50px;">
+    <!-- side barre -->
+    <div class="row">
+        <div class="col col-4 sidfixed">
+            <!-- A vertical navbar -->
+            <div class="w3-sidebar w3-bar-block w3-large w3-border-bottom">
+                <a routerLink="/contenu" class="w3-bar-item w3-button"> <i class="fa fa-home"></i> Home </a>
+                <a routerLink="/quisommenous" class="w3-bar-item w3-button"> <i class="fa fa-exclamation"> </i> Qui somme nous</a>
+                <div class="w3-dropdown-hover">
+                    <button class="w3-button"> <i class="fa fa-navicon"> </i> Nos Produits </button>
+                    <div class="w3-dropdown-content w3-bar-block">
+                        <a routerLink="/patlist" class="w3-bar-item w3-button">Patissiers</a>
+                        <a routerLink="/artslist" class="w3-bar-item w3-button">Artisanaux</a>
+                    </div>
+                </div>
+                <a href="#" class="w3-bar-item w3-button"> <i class="fa fa-wrench"></i> Condition de vente</a>
+                <a routerLink="/contactez" class="w3-bar-item w3-button"> <i class="fa fa-envelope"> </i> Contactez nous</a>
+            </div>
 
+            <div style="margin-left:50px;">
+
+            </div>
+
+        </div>
     </div>
 
-  </div>
-</div>
-</div>
 </body>
-</html>
 
+</html>
